--- a/app/src/main/res/layout/layout_fragment_path_complejo.xml
+++ b/app/src/main/res/layout/layout_fragment_path_complejo.xml
@@ -4,4 +4,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
+    <ImageView
+        android:id="@+id/imgLuna"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_moon"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
