--- a/app/src/main/res/layout/layout_fragment_animacion_dragevents_pathcomplejo.xml
+++ b/app/src/main/res/layout/layout_fragment_animacion_dragevents_pathcomplejo.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.motion.widget.MotionLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:motion="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
     app:layoutDescription="@xml/layout_fragment_animacion_dragevents_pathcomplejo_scene"
-    motion:motionDebug="SHOW_PATH">
+    app:motionDebug="SHOW_PATH">
 
     <ImageView
         android:id="@+id/imgLuna"
