--- a/app/src/main/res/layout/layout_fragment_main_menu.xml
+++ b/app/src/main/res/layout/layout_fragment_main_menu.xml
@@ -157,4 +157,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtOpcion_7"/>
 
+    <TextView
+        android:id="@+id/txtOpcion_9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:text="Prueba Mia"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@color/btn_text_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtOpcion_8"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
